--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -27,10 +27,11 @@
   <meta property="twitter:image" content="https://ashub.com/assets/images/twitter-image.jpg">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+  <link rel="icon" type="image/png" href="/As-Hub-remove.ico">
+  <link rel="icon" type="image/x-icon" href="/As-Hub-remove.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/As-Hub-remove.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/As-Hub-remove.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="/As-Hub-remove.ico">
   
   <!-- Theme Color -->
   <meta name="theme-color" content="#1e3a8a">
