--- a/admin-panel/src/index.html
+++ b/admin-panel/src/index.html
@@ -6,7 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="AS Hub Admin Panel - Content Management System">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="/As Hub remove.png">
+  <link rel="icon" type="image/x-icon" href="/As-Hub-remove.ico">
 </head>
 <body>
   <app-root></app-root>
